<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/black"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="gone"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="LAH MANYALASAIAN  " />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-4914903732265878/1938916143">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/tv_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="1/61" />
    </LinearLayout>


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/popularsong"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_tebak_penyanyi"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="clearProgress"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/text_tebak_penyanyi"
        android:background="@drawable/corner_comment"
        android:textColor="@android:color/white"
        android:layout_alignRight="@+id/iv_logo"
        android:layout_alignEnd="@+id/iv_logo"
        android:layout_alignBottom="@+id/btn_tebak_judul" />

    <Button
        android:id="@+id/btn_tebak_pencipta"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="clearProgress"
        android:text="RATE"
        android:padding="10dp"
        android:textStyle="bold"
        android:background="@drawable/corner_comment"
        android:textColor="@android:color/white"
        android:layout_alignTop="@+id/btn_tebak_lirik"
        android:layout_alignLeft="@+id/btn_tebak_penyanyi"
        android:layout_alignStart="@+id/btn_tebak_penyanyi" />

    <Button
        android:id="@+id/btn_tebak_lirik"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="clearProgress"
        android:text="@string/text_cara_main"
        android:padding="10dp"
        android:textStyle="bold"
        android:background="@drawable/corner_comment"
        android:textColor="@android:color/white"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/btn_tebak_judul"
        android:layout_alignLeft="@+id/btn_tebak_judul"
        android:layout_alignStart="@+id/btn_tebak_judul" />


    <Button
        android:id="@+id/btn_tebak_judul"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="about"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/text_tebak_judul"
        android:textColor="@android:color/white"
        android:background="@drawable/corner_comment"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/frame"
        android:layout_alignLeft="@+id/iv_logo"
        android:layout_alignStart="@+id/iv_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:background="@drawable/ic_volume_off_black_24dp"
        android:layout_height="wrap_content"
        android:id="@+id/iv_volume_off"
        android:visibility="gone"
        android:layout_above="@+id/btn_tebak_pencipta"
        android:layout_toRightOf="@+id/btn_tebak_lirik"
        android:layout_toEndOf="@+id/btn_tebak_lirik" />

    <ImageView
        android:layout_width="wrap_content"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:layout_height="wrap_content"
        android:id="@+id/iv_volume_on"
        android:layout_above="@+id/btn_tebak_pencipta"
        android:layout_toRightOf="@+id/btn_tebak_lirik"
        android:layout_toEndOf="@+id/btn_tebak_lirik" />

    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/iv_pan_big"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/iv_pan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/button_start_lights" />

            <ImageView
                android:id="@+id/iv_pan_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/button_start_lights" />

            <ImageView
                android:id="@+id/pring"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/piring_2" />


        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/rate"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stardvs"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>




    </RelativeLayout>


</RelativeLayout>
